# atom-sim

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  index.html
.github/workflows/: ci.yml
src/: main.rs
src/common/: auto_tour.rs  camera.rs  equations.rs  evidence.rs  experiment.rs  export.rs  mod.rs  narrative.rs  predict.rs  quantum_explorer.rs  quiz.rs  sandbox.rs  snapshot.rs  timeline.rs  tooltip.rs  transition.rs  ui.rs  walkthrough.rs
src/eras/: bohr.rs  dalton.rs  de_broglie.rs  democritus.rs  dirac.rs  mod.rs  rutherford.rs  schrodinger.rs  sommerfeld.rs  thomson.rs
src/physics/: classical.rs  coulomb.rs  mod.rs  quantum.rs  spectral.rs
team/: AD-001.md  CP-001.md  GP-001.md  ORGANOGRAMA.md  PH-001.md  QM-001-criterios.md  QM-001.md  SE-001.md  TEAM.md  TL-001.md  UX-001.md
team/context/: CHANGELOG.md  DECISIONS.md  PROJECT.md
team/specs/: AD-001.spec.md  CP-001.spec.md  DEPRECATED.md  GP-001.spec.md  PH-001.spec.md  QM-001.spec.md  SE-001.spec.md  TL-001.spec.md  UX-001.spec.md
